Bug 255863. Make drag/drop work even when the clicked-on content gets reframed by the click. r=mats,sr=bzbarsky